--- a/Yukari/src/main/res/xml/commands.xml
+++ b/Yukari/src/main/res/xml/commands.xml
@@ -77,5 +77,9 @@
             android:key="allow_cutoff"
             android:title="ブロブロ解除コマンドを有効にする"
             android:summary="フォロー管理のブロックとかがあるサブメニューに増やします"/>
+        <CheckBoxPreference
+            android:key="mikutter_stable_notify"
+            android:title="mikutterの更新通知を有効にする"
+            android:summary="起動時に確認を行い、mikutterのstableリリースが出た際には通知します"/>
     </PreferenceCategory>
 </PreferenceScreen>
