--- a/Yukari/src/main/res/xml/pref.xml
+++ b/Yukari/src/main/res/xml/pref.xml
@@ -303,8 +303,7 @@
         <CheckBoxPreference
             android:key="pref_enable_service"
             android:title="Serviceの常駐"
-            android:summary="Serviceを常駐モードで起動します\n基本オンで、どうしても動作に問題があるときは外してください"
-            android:defaultValue="true"/>
+            android:summary="Serviceを常駐モードで起動します\n環境によっては動作が安定しますが、RAMが解放されにくくなるのでマルチタスクには不利です"/>
     </PreferenceCategory>
 
     <PreferenceCategory android:title="アプリについて">
