--- a/Yukari/src/main/res/layout/fragment_profile.xml
+++ b/Yukari/src/main/res/layout/fragment_profile.xml
@@ -312,6 +312,28 @@
             android:layout_marginTop="-7dp"
             android:indeterminate="true" />
 
+        <FrameLayout
+                android:layout_width="fill_parent"
+                android:layout_height="fill_parent"
+                android:layout_alignParentTop="true"
+                android:layout_alignParentLeft="true"
+                android:layout_alignParentStart="true"
+                android:background="#f00">
+
+            <Button
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:text="☆お別れブロック☆"
+                    android:id="@+id/btnBlock"
+                    android:layout_alignParentTop="true"
+                    android:layout_alignParentLeft="true"
+                    android:layout_alignParentStart="true"
+                    android:layout_alignParentRight="true"
+                    android:layout_alignParentEnd="true"
+                    android:visibility="gone"
+                    android:enabled="false"/>
+        </FrameLayout>
+
 
     </RelativeLayout>
 
