結月ゆかりが告白してくる機能

--- a/Yukari/src/main/res/values/arrays.xml
+++ b/Yukari/src/main/res/values/arrays.xml
@@ -160,4 +160,16 @@
         <item>3</item>
         <item>4</item>
     </string-array>
+
+    <string-array name="j_yukari_fav_entries">
+        <item>ふぁぼっ★</item>
+        <item>いいねっ♥</item>
+        <item>すきっ♥</item>
+    </string-array>
+
+    <string-array name="j_yukari_fav_values">
+        <item>0</item>
+        <item>1</item>
+        <item>2</item>
+    </string-array>
 </resources>
