--- a/Yukari/src/main/res/xml/commands.xml
+++ b/Yukari/src/main/res/xml/commands.xml
@@ -85,5 +85,12 @@
             android:key="j_owakare_block"
             android:title="お別れブロックボタン"
             android:summary="お別れはブロックでとか甘いこと言うな"/>
+        <ListPreference
+            android:key="j_yukari_voice_fav"
+            android:title="ゆかりさんのふぁぼボイス"
+            android:summary="ゆかりさんボイスが有効になってる必要がある"
+            android:defaultValue="0"
+            android:entries="@array/j_yukari_fav_entries"
+            android:entryValues="@array/j_yukari_fav_values"/>
     </PreferenceCategory>
 </PreferenceScreen>
