--- a/Yukari/src/main/res/layout/activity_imagepreview.xml
+++ b/Yukari/src/main/res/layout/activity_imagepreview.xml
@@ -32,6 +32,29 @@
             android:layout_gravity="left"/>
 
         <LinearLayout
+                android:orientation="horizontal"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:padding="4dp"
+                android:id="@+id/llQrText"
+                android:visibility="gone">
+
+            <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="QR: "
+                    android:id="@+id/textView5"
+                    android:textColor="#000"/>
+
+            <TextView
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:text="..."
+                    android:id="@+id/tvQrText"
+                    android:textColor="#000"/>
+        </LinearLayout>
+
+        <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_gravity="center">
