デフォルトクエリの変更と、noteqのエイリアス追加

--- a/Yukari/src/main/res/layout/activity_query.xml
+++ b/Yukari/src/main/res/layout/activity_query.xml
@@ -10,7 +10,7 @@
             android:inputType="textMultiLine"
             android:ems="10"
             android:id="@+id/etQuery"
-            android:text="from * where ()"
+            android:text="from * where (t)"
             android:layout_weight="1"
             android:gravity="top"/>
 
