5インチ以上の端末でサムネイルサイズが小さい問題を修正

--- a/Yukari/src/main/res/values/dimens.xml
+++ b/Yukari/src/main/res/values/dimens.xml
@@ -18,4 +18,6 @@
     <dimen name="status_button_padding">12dp</dimen>
     <dimen name="status_button_delta">100dp</dimen>
     <dimen name="status_button_delta_half">50dp</dimen>
+
+    <dimen name="attach_picture_size">78dp</dimen>
 </resources>
