--- a/Yukari/src/main/res/layout/activity_imagepreview.xml
+++ b/Yukari/src/main/res/layout/activity_imagepreview.xml
@@ -109,11 +109,19 @@
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Preparing..."
         android:id="@+id/tvPreviewProgress"
-        android:layout_gravity="right"
-        android:layout_below="@+id/pbPreview"
-        android:layout_alignParentRight="true"
-        android:layout_alignParentEnd="true" />
+        android:text=""
+        android:textColor="@color/white"
+        android:layout_centerInParent="true"/>
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/tvPreviewProgress2"
+        android:text=""
+        android:textColor="@color/white"
+        android:layout_below="@+id/progressBar"
+        android:layout_centerHorizontal="true"
+        android:gravity="center"/>
 
 </RelativeLayout>
