--- a/Yukari/src/main/res/xml/commands.xml
+++ b/Yukari/src/main/res/xml/commands.xml
@@ -59,6 +59,12 @@
         <Preference
             android:title="::td"
             android:summary="定型文を登録・編集します"/>
+        <Preference
+            android:title="::rev &lt;TEXT&gt;"
+            android:summary="&lt;TEXT&gt;を逆に並び替えます (ゆかり→りかゆ)"/>
+        <Preference
+            android:title="::shuf &lt;TEXT&gt;"
+            android:summary="&lt;TEXT&gt;をランダムに並び替えます"/>
     </PreferenceCategory>
     <PreferenceCategory android:title="ジョーク機能">
         <CheckBoxPreference
