--- a/Yukari/src/main/res/layout/activity_backup.xml
+++ b/Yukari/src/main/res/layout/activity_backup.xml
@@ -3,7 +3,8 @@
               xmlns:tools="http://schemas.android.com/tools"
               android:orientation="vertical"
               android:layout_width="match_parent"
-              android:layout_height="match_parent">
+              android:layout_height="match_parent"
+              android:padding="6dp">
 
     <LinearLayout
             android:layout_width="match_parent"
@@ -18,28 +19,13 @@
                 android:id="@+id/textView7"
                 android:gravity="center_vertical"/>
 
-        <LinearLayout
-                android:orientation="vertical"
+        <Spinner
                 android:layout_width="match_parent"
-                android:layout_height="match_parent">
-
-            <Spinner
-                    android:layout_width="match_parent"
-                    android:layout_height="0dp"
-                    android:id="@+id/spinner"
-                    android:spinnerMode="dropdown"
-                    android:entries="@array/backup_location"
-                    android:layout_weight="1"/>
-
-            <TextView
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:text="未設定 (上で何か選択して下さい)"
-                    android:id="@+id/tvLocation"
-                    android:ellipsize="end"
-                    android:layout_marginLeft="4dp"
-                    android:layout_marginRight="4dp"/>
-        </LinearLayout>
+                android:layout_height="wrap_content"
+                android:id="@+id/spinner"
+                android:spinnerMode="dropdown"
+                android:entries="@array/backup_location"
+                android:layout_weight="1"/>
 
     </LinearLayout>
 
@@ -53,7 +39,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:text="実行"
-            android:id="@+id/button2"
+            android:id="@+id/btnExecute"
             android:layout_gravity="center_horizontal"
             />
 </LinearLayout>
