--- a/Yukari/src/main/res/xml/pref.xml
+++ b/Yukari/src/main/res/xml/pref.xml
@@ -22,10 +22,6 @@
             android:key="pref_quick_scroll_to_top"
             android:title="先頭へぽっぴんジャンプ♪"
             android:summary="フッターバーの余白部分をタップした時にTLの一番上へ移動します"/>
-        <CheckBoxPreference
-            android:key="pref_lock_scroll_after_reload"
-            android:title="再読み込み後スクロール位置を保持"
-            android:summary="再読み込みを行った後、TLの一番上へ移動しないようにします。\n※※フィルタタブでしか使えません※※"/>
     </PreferenceCategory>
 
     <PreferenceCategory android:title="ツイート詳細画面の機能">
@@ -343,6 +339,10 @@
             android:key="pref_use_strict_filter"
             android:title="フィルタTLのシステムを全体で使う"
             android:summary="フィルタタブ以外も、同じ意味のクエリを持つフィルタタブとして処理するようにします。\n同じ意味のソースが存在するタブのみ適用されます。"/>
+        <CheckBoxPreference
+            android:key="pref_lock_scroll_after_reload"
+            android:title="フィルタTL再読込後スクロール位置を保持"
+            android:summary="再読み込みを行った後、TLの一番上へ移動しないようにします。\n※※フィルタタブでしか使えません※※"/>
     </PreferenceCategory>
 
     <PreferenceCategory android:title="プラグインエンジン (実験中)">
