--- a/Yukari/src/main/res/layout/activity_imagepreview.xml
+++ b/Yukari/src/main/res/layout/activity_imagepreview.xml
@@ -51,7 +51,8 @@
                     android:layout_height="wrap_content"
                     android:text="..."
                     android:id="@+id/tvQrText"
-                    android:textColor="#000"/>
+                    android:textColor="#000"
+                    android:autoLink="all"/>
         </LinearLayout>
 
         <LinearLayout
