--- a/Yukari/src/main/res/xml/pref.xml
+++ b/Yukari/src/main/res/xml/pref.xml
@@ -86,6 +86,10 @@
             android:title="投稿画面を閉じる前に確認"
             android:summary="ツイートキャンセル前に下書きに保存するか確認を行います"
             android:defaultValue="true"/>
+        <CheckBoxPreference
+            android:key="pref_dialog_swipe"
+            android:title="TLタッチ拡張時に確認"
+            android:summary="TLタッチ拡張による各種クイック操作時に確認を行います"/>
     </PreferenceCategory>
 
     <PreferenceCategory android:title="表示設定">
