--- a/Yukari/src/main/res/values-v11/themes_colors.xml
+++ b/Yukari/src/main/res/values-v11/themes_colors.xml
@@ -3,41 +3,12 @@
 <!-- Generated with http://android-holo-colors.com -->
 <resources xmlns:android="http://schemas.android.com/apk/res/android">
 
-    <style name="ColorsTheme.Base" parent="Theme.AppCompat.Light.DarkActionBar">
-        <item name="tweetTextColor">#000</item>
-        <item name="tweetPressColor">?attr/colorPrimaryLight</item>
-        <item name="tweetFocusColor">?attr/colorPrimaryLight</item>
-
-        <item name="tweetNormal">@android:color/transparent</item>
-        <item name="tweetRetweet">@drawable/bg_retweet</item>
-        <item name="tweetOwn">@drawable/bg_own</item>
-        <item name="tweetMention">@drawable/bg_mention</item>
-
+    <style name="ColorsTheme.Light" parent="ColorsTheme.Base">
         <item name="tabTitleColor">@color/key_color</item>
-
-        <item name="profileTweetsDrawable">@drawable/ic_prof_tweets</item>
-        <item name="profileFavoritesDrawable">@drawable/ic_prof_favorite</item>
-        <item name="profileFollowsDrawable">@drawable/ic_prof_follow</item>
-        <item name="profileFollowersDrawable">@drawable/ic_prof_follower</item>
-
-
-        <item name="menuProfileDrawable">@drawable/ic_profile</item>
-        <item name="menuTwilogDrawable">@drawable/ic_twilog</item>
-        <item name="menuFavstarDrawable">@drawable/ic_favorite_m</item>
-        <item name="menuAclogDrawable">@drawable/ic_aclog</item>
-        <item name="menuBacklightDrawable">@drawable/ic_always_light_off</item>
-        <item name="menuReportDrawable">@drawable/ic_feedback</item>
-        <item name="menuSettingDrawable">@drawable/ic_settings</item>
-        <item name="menuQuitDrawable">@drawable/ic_quit</item>
-        <item name="menuReloadDrawable">@drawable/ic_navigation_refresh</item>
-        <item name="menuBookmarkDrawable">@drawable/ic_bookmark</item>
-
-        <item name="menuButtonDrawable">@drawable/ic_menu_dark</item>
-        <item name="searchButtonDrawable">@drawable/ic_search</item>
 
         <item name="colorPrimary">@color/key_color</item>
         <item name="colorPrimaryDark">@color/key_color_2</item>
-        <item name="colorPrimaryLight">#B394E0</item>
+        <item name="colorPrimaryLight">@color/key_color_light</item>
         <item name="colorAccent">@color/key_color_accent</item>
 
         <item name="footerBarColor">@color/status_bar_color</item>
@@ -45,42 +16,63 @@
         <item name="focusDrawable">@drawable/focus_key_light_color</item>
     </style>
 
-    <style name="ColorsTheme.Base.Dialog" parent="Theme.AppCompat.Light.Dialog">
-        <item name="tweetTextColor">#000</item>
-        <item name="tweetPressColor">?attr/colorPrimaryLight</item>
-        <item name="tweetFocusColor">?attr/colorPrimaryLight</item>
-
-        <item name="tweetNormal">@android:color/transparent</item>
-        <item name="tweetRetweet">@drawable/bg_retweet</item>
-        <item name="tweetOwn">@drawable/bg_own</item>
-        <item name="tweetMention">@drawable/bg_mention</item>
-
+    <style name="ColorsTheme.Light.Dialog" parent="ColorsTheme.Base.Dialog">
         <item name="tabTitleColor">@color/key_color</item>
-
-        <item name="tweetCountColor">@color/count_safe</item>
-        <item name="tweetCountOverColor">@color/count_error</item>
-
-        <item name="selectorTextColor">@color/selector_key_light_textcolor</item>
-
-        <item name="menuButtonDrawable">@drawable/ic_menu_dark</item>
-        <item name="searchButtonDrawable">@drawable/ic_search</item>
-
-        <item name="tweetAttachDrawable">@drawable/ic_content_picture</item>
-        <item name="tweetShotDrawable">@drawable/ic_access_camera</item>
-        <item name="tweetTagDrawable">@drawable/ic_hashtag</item>
-        <item name="tweetGrassDrawable">@drawable/ic_grass</item>
-        <item name="tweetPointDrawable">@drawable/ic_santen</item>
-        <item name="tweetDraftDrawable">@drawable/ic_list</item>
-        <item name="tweetReplyDrawable">@drawable/ic_reply_b</item>
-        <item name="tweetVoiceDrawable">@drawable/ic_voice_input</item>
-        <item name="tweetMorseDrawable">@drawable/ic_morse</item>
-        <item name="tweetNowPlayingDrawable">@drawable/ic_playing_music</item>
 
         <item name="colorPrimary">@color/key_color</item>
         <item name="colorPrimaryDark">@color/key_color_2</item>
+        <item name="colorPrimaryLight">@color/key_color_light</item>
         <item name="colorAccent">@color/key_color_accent</item>
+
+        <item name="footerBarColor">@color/status_bar_color</item>
         <item name="pressDrawable">@drawable/press_key_light_color</item>
         <item name="focusDrawable">@drawable/focus_key_light_color</item>
+    </style>
+
+    <style name="ColorsTheme.Light.Translucent" parent="ColorsTheme.Light">
+        <item name="android:windowIsTranslucent">true</item>
+        <item name="android:windowBackground">@drawable/preview_bg</item>
+        <item name="dialogStyle">@drawable/dialog_full_holo_light</item>
+    </style>
+
+    <style name="ColorsTheme.Light.Dialog.VertAnimation" parent="ColorsTheme.Light.Dialog">
+        <item name="android:windowAnimationStyle">@style/Animation.Vert</item>
+    </style>
+
+    <style name="ColorsTheme.Dark" parent="ColorsTheme.Base.Dark">
+        <item name="tabTitleColor">@color/white</item>
+
+        <item name="colorPrimary">@color/key_color</item>
+        <item name="colorPrimaryDark">@color/key_color_2</item>
+        <item name="colorPrimaryLight">@color/key_color_light</item>
+        <item name="colorAccent">@color/key_color_accent</item>
+
+        <item name="footerBarColor">@color/status_bar_color</item>
+        <item name="pressDrawable">@drawable/press_key_light_color</item>
+        <item name="focusDrawable">@drawable/focus_key_light_color</item>
+    </style>
+
+    <style name="ColorsTheme.Dark.Dialog" parent="ColorsTheme.Base.Dark.Dialog">
+        <item name="tabTitleColor">@color/white</item>
+
+        <item name="colorPrimary">@color/key_color</item>
+        <item name="colorPrimaryDark">@color/key_color_2</item>
+        <item name="colorPrimaryLight">@color/key_color_light</item>
+        <item name="colorAccent">@color/key_color_accent</item>
+
+        <item name="footerBarColor">@color/status_bar_color</item>
+        <item name="pressDrawable">@drawable/press_key_light_color</item>
+        <item name="focusDrawable">@drawable/focus_key_light_color</item>
+    </style>
+
+    <style name="ColorsTheme.Dark.Translucent" parent="ColorsTheme.Dark">
+        <item name="android:windowIsTranslucent">true</item>
+        <item name="android:windowBackground">@drawable/preview_bg</item>
+        <item name="dialogStyle">@drawable/dialog_full_holo_dark</item>
+    </style>
+
+    <style name="ColorsTheme.Dark.Dialog.VertAnimation" parent="ColorsTheme.Dark.Dialog">
+        <item name="android:windowAnimationStyle">@style/Animation.Vert</item>
     </style>
 
     <style name="ColorsTheme.Zunko" parent="ColorsTheme.Base">
