--- a/Yukari/src/main/res/values-v19/styles.xml
+++ b/Yukari/src/main/res/values-v19/styles.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
 
-    <style name="YukariAboutTheme" parent="YukariLightTheme">
+    <style name="YukariAboutTheme" parent="ColorsTheme.Light">
         <item name="android:windowTranslucentStatus">true</item>
         <item name="android:windowTranslucentNavigation">true</item>
     </style>
