--- a/Yukari/src/main/res/values-v21/styles.xml
+++ b/Yukari/src/main/res/values-v21/styles.xml
@@ -1,6 +1,9 @@
 <resources xmlns:tools="http://schemas.android.com/tools">
 
     <style name="AppThemeTranslucent" parent="android:Theme.Material.Light.NoActionBar" tools:ignore="NewApi">
+        <item name="android:colorPrimary">@color/key_color</item>
+        <item name="android:colorPrimaryDark">@color/key_color_2</item>
+        <item name="android:colorAccent">@color/key_color_accent</item>
         <item name="android:windowIsTranslucent">true</item>
         <item name="android:windowBackground">@android:color/transparent</item>
         <item name="tweetTextColor">#000</item>
@@ -13,6 +16,9 @@
     </style>
 
     <style name="AppThemeTranslucent.Dark" parent="android:Theme.Material.NoActionBar" tools:ignore="NewApi">
+        <item name="android:colorPrimary">@color/key_color</item>
+        <item name="android:colorPrimaryDark">@color/key_color_2</item>
+        <item name="android:colorAccent">@color/key_color_accent</item>
         <item name="android:windowIsTranslucent">true</item>
         <item name="android:windowBackground">@android:color/transparent</item>
         <item name="tweetTextColor">#000</item>
@@ -25,6 +31,9 @@
     </style>
 
     <style name="AppThemeTranslucentBg" parent="android:Theme.Material.Light.NoActionBar" tools:ignore="NewApi">
+        <item name="android:colorPrimary">@color/key_color</item>
+        <item name="android:colorPrimaryDark">@color/key_color_2</item>
+        <item name="android:colorAccent">@color/key_color_accent</item>
         <item name="android:windowIsTranslucent">true</item>
         <item name="android:windowBackground">@drawable/preview_bg</item>
         <item name="android:progressBarStyleHorizontal">@style/ProgressBarTranslucentBGTheme</item>
