動画プレビューのプログレスバー用リソース削除

--- a/Yukari/src/main/res/layout/activity_moviepreview.xml
+++ b/Yukari/src/main/res/layout/activity_moviepreview.xml
@@ -46,16 +46,11 @@
     </FrameLayout>
 
     <ProgressBar
-        style="?android:attr/progressBarStyleHorizontal"
+        style="?android:attr/progressBarStyleLarge"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:id="@+id/progressBar"
-        android:layout_above="@+id/llPreviewPanel"
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="true"
-        android:layout_alignParentRight="true"
-        android:layout_alignParentEnd="true"
-        android:layout_marginBottom="-8dp"
+        android:layout_centerInParent="true"
         android:indeterminate="true" />
 
 </RelativeLayout>
