ローディング行のプログレスをMaterial化

--- a/Yukari/src/main/res/values-v21/styles.xml
+++ b/Yukari/src/main/res/values-v21/styles.xml
@@ -36,6 +36,9 @@
         <item name="android:colorAccent">@color/key_color_accent</item>
         <item name="android:windowIsTranslucent">true</item>
         <item name="android:windowBackground">@drawable/preview_bg</item>
+        <item name="colorPrimary">@color/key_color</item>
+        <item name="colorPrimaryDark">@color/key_color_2</item>
+        <item name="colorAccent">@color/key_color_accent</item>
         <item name="tweetTextColor">#000</item>
         <item name="tweetPressColor">@color/bg_press</item>
         <item name="tweetFocusColor">@color/bg_press</item>
