--- a/Yukari/src/main/res/layout/fragment_profile.xml
+++ b/Yukari/src/main/res/layout/fragment_profile.xml
@@ -304,11 +304,8 @@
         </LinearLayout>
 
         <com.rey.material.widget.ProgressView
+            style="@style/Yukari.Material.CircularProgress"
             android:id="@+id/progressBar"
-            app:pv_circular="true"
-            app:pv_autostart="true"
-            app:pv_progressMode="indeterminate"
-            app:pv_progressStyle="@style/Material.Drawable.CircularProgress"
             android:layout_width="36dp"
             android:layout_height="36dp"
             android:layout_marginTop="10dp"
