--- a/Yukari/src/main/res/layout/row_loading.xml
+++ b/Yukari/src/main/res/layout/row_loading.xml
@@ -5,10 +5,10 @@
     android:layout_height="match_parent"
     android:paddingBottom="36dp">
 
-    <ProgressBar
-        style="?android:attr/progressBarStyleLarge"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+    <com.rey.material.widget.ProgressView
+        style="@style/Yukari.Material.CircularProgress"
+        android:layout_width="64dp"
+        android:layout_height="64dp"
         android:id="@+id/pbLoading"
         android:visibility="invisible"
         android:layout_gravity="center" />
