--- a/Yukari/src/main/res/layout/fragment_profile.xml
+++ b/Yukari/src/main/res/layout/fragment_profile.xml
@@ -1,32 +1,120 @@
 <?xml version="1.0" encoding="utf-8"?>
 
-<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
+<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:fillViewport="false"
-    android:orientation="vertical">
+    android:layout_width="match_parent"
+    android:layout_height="match_parent">
+
+    <android.support.design.widget.AppBarLayout
+        android:id="@+id/appBarLayout"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">
+
+        <android.support.design.widget.CollapsingToolbarLayout
+            android:id="@+id/collapsingToolbarLayout"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            app:layout_scrollFlags="scroll|exitUntilCollapsed"
+            app:contentScrim="?attr/colorPrimary"
+            app:titleEnabled="false">
+
+            <RelativeLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content">
+
+                <ImageView
+                    android:id="@+id/ivProfileHeader"
+                    android:layout_width="match_parent"
+                    android:layout_height="180dp"
+                    android:background="#000"
+                    android:scaleType="fitCenter"
+                    android:layout_alignParentTop="true"
+                    android:layout_alignParentLeft="true"
+                    android:layout_alignParentRight="true"/>
+
+                <ImageView
+                    android:id="@+id/ivProfileIcon"
+                    android:layout_width="96dp"
+                    android:layout_height="96dp"
+                    android:layout_below="@+id/ivProfileHeader"
+                    android:layout_marginTop="-32dp"
+                    android:layout_marginLeft="16dp"
+                    android:layout_gravity="center"
+                    android:background="@drawable/icon_background"
+                    android:src="@drawable/yukatterload" />
+
+                <TextView
+                    android:id="@+id/tvProfileName"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_below="@+id/ivProfileIcon"
+                    android:layout_alignLeft="@+id/ivProfileIcon"
+                    android:layout_marginTop="8dp"
+                    android:textAppearance="?android:attr/textAppearanceMedium"
+                    android:text="User Name"
+                    android:textColor="@android:color/white"
+                    android:autoLink="none"/>
+
+                <ImageView
+                    android:id="@+id/ivProfileProtected"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_toRightOf="@+id/tvProfileName"
+                    android:layout_alignTop="@+id/tvProfileName"
+                    android:layout_alignBottom="@+id/tvProfileName"
+                    android:layout_marginLeft="2dp"
+                    android:src="@drawable/ic_secure_d"
+                    android:visibility="gone" />
+
+                <TextView
+                    android:id="@+id/tvProfileScreenName"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_below="@+id/tvProfileName"
+                    android:layout_alignLeft="@+id/tvProfileName"
+                    android:layout_marginTop="4dp"
+                    android:paddingBottom="8dp"
+                    android:textAppearance="?android:attr/textAppearanceSmall"
+                    android:text="\uff20ScreenName"
+                    android:textColor="@android:color/white"
+                    android:autoLink="none"/>
+
+                <ImageView
+                    android:id="@+id/ivProfileUserColor"
+                    android:layout_width="4dp"
+                    android:layout_height="0dp"
+                    android:layout_below="@+id/ivProfileHeader"
+                    android:layout_alignBottom="@+id/tvProfileScreenName"/>
+            </RelativeLayout>
+
+            <android.support.v7.widget.Toolbar
+                android:id="@+id/toolbar"
+                android:layout_width="match_parent"
+                android:layout_height="?attr/actionBarSize"
+                app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
+                app:layout_collapseMode="pin"/>
+        </android.support.design.widget.CollapsingToolbarLayout>
+
+    </android.support.design.widget.AppBarLayout>
+
+    <android.support.v4.widget.NestedScrollView
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        app:layout_behavior="@string/appbar_scrolling_view_behavior">
 
     <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent">
-
-        <ImageView
-            android:id="@+id/ivProfileHeader"
-            android:layout_width="match_parent"
-            android:layout_height="180dp"
-            android:layout_alignParentLeft="true"
-            android:layout_alignParentTop="true"
-            android:background="#000"
-            android:scaleType="fitCenter" />
 
         <ImageButton
             android:id="@+id/ibProfileMenu"
             android:layout_width="54dp"
             android:layout_height="48dp"
             android:layout_alignParentLeft="true"
-            android:layout_alignTop="@+id/ibProfileSearch"
+            android:layout_alignParentTop="true"
             android:layout_gravity="center"
+            android:layout_marginTop="4dp"
             android:layout_marginLeft="8dp"
             android:src="?attr/menuButtonDrawable" />
 
@@ -34,105 +122,23 @@
             android:id="@+id/ibProfileSearch"
             android:layout_width="wrap_content"
             android:layout_height="48dp"
-            android:layout_below="@+id/ivProfileHeader"
             android:layout_gravity="center"
-            android:layout_marginTop="4dp"
+            android:layout_alignTop="@+id/ibProfileMenu"
             android:layout_toRightOf="@+id/ibProfileMenu"
             android:src="?attr/searchButtonDrawable"/>
-
-        <Button
-            android:id="@+id/btnProfileFollow"
-            android:layout_width="160dp"
-            android:layout_height="48dp"
-            android:layout_alignParentRight="true"
-            android:layout_alignTop="@+id/ibProfileSearch"
-            android:layout_marginRight="8dp"
-            android:enabled="true"
-            android:text="フォロー管理" />
 
         <ImageView
             android:id="@+id/imageView2"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_alignLeft="@+id/ibProfileMenu"
-            android:layout_alignRight="@+id/btnProfileFollow"
+            android:layout_alignParentLeft="true"
+            android:layout_alignParentRight="true"
             android:layout_below="@+id/ibProfileMenu"
             android:layout_marginTop="4dp"
+            android:layout_marginLeft="8dp"
+            android:layout_marginRight="8dp"
             android:scaleType="fitXY"
             android:src="@android:drawable/divider_horizontal_textfield" />
-
-        <FrameLayout
-            android:id="@+id/frameLayout"
-            android:layout_width="80dp"
-            android:layout_height="80dp"
-            android:layout_alignParentTop="true"
-            android:layout_centerHorizontal="true"
-            android:layout_marginTop="8dp"
-            android:background="#9eee">
-
-            <ImageView
-                android:id="@+id/ivProfileIcon"
-                android:layout_width="72dp"
-                android:layout_height="72dp"
-                android:layout_gravity="center"
-                android:background="#9eee"
-                android:src="@drawable/yukatterload" />
-        </FrameLayout>
-
-        <LinearLayout
-            android:id="@+id/linearLayout"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_below="@+id/frameLayout"
-            android:layout_centerHorizontal="true"
-            android:layout_marginTop="15dp"
-            android:orientation="vertical">
-
-            <LinearLayout
-                android:layout_width="wrap_content"
-                android:layout_height="fill_parent"
-                android:layout_gravity="center_horizontal"
-                android:background="#9eee"
-                android:orientation="horizontal"
-                android:padding="4dp">
-
-                <TextView
-                    android:id="@+id/tvProfileName"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_gravity="center"
-                    android:phoneNumber="false"
-                    android:shadowColor="#333"
-                    android:shadowRadius="5"
-                    android:text="User Name"
-                    android:textAppearance="?android:attr/textAppearanceMedium"
-                    android:textColor="#fff" />
-
-                <ImageView
-                    android:id="@+id/ivProfileProtected"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_marginLeft="2dp"
-                    android:src="@drawable/ic_secure"
-                    android:visibility="gone" />
-            </LinearLayout>
-
-            <TextView
-                android:id="@+id/tvProfileScreenName"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_gravity="center"
-                android:layout_marginTop="14dp"
-                android:background="#9eee"
-                android:padding="2dp"
-                android:phoneNumber="false"
-                android:shadowColor="#333"
-                android:shadowRadius="5"
-                android:text="\uff20screen_name"
-                android:textAppearance="?android:attr/textAppearanceMedium"
-                android:textColor="#fff"
-                android:textSize="14dp" />
-        </LinearLayout>
 
         <GridView
             android:id="@+id/gvProfileCommands"
@@ -143,38 +149,6 @@
             android:layout_below="@+id/imageView2"
             android:layout_marginTop="8dp"
             android:numColumns="2" />
-
-        <LinearLayout
-            android:id="@+id/llProfileBio"
-            android:layout_width="fill_parent"
-            android:layout_height="fill_parent"
-            android:layout_alignLeft="@+id/imageView2"
-            android:layout_alignRight="@+id/imageView2"
-            android:layout_below="@+id/gvProfileCommands"
-            android:layout_marginTop="8dp"
-            android:orientation="vertical">
-
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="BIO"
-                android:textColor="#505050" />
-
-            <ImageView
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginBottom="4dp"
-                android:layout_marginTop="2dp"
-                android:scaleType="fitXY"
-                android:src="@android:drawable/divider_horizontal_textfield" />
-
-            <TextView
-                android:id="@+id/tvProfileBio"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="" />
-            <!--android:autoLink="web|email|map"-->
-        </LinearLayout>
 
         <LinearLayout
             android:id="@+id/llProfileLocation"
@@ -303,16 +277,6 @@
                 android:text="#" />
         </LinearLayout>
 
-        <com.rey.material.widget.ProgressView
-            style="@style/Yukari.Material.CircularProgress"
-            android:id="@+id/progressBar"
-            android:layout_width="36dp"
-            android:layout_height="36dp"
-            android:layout_marginTop="10dp"
-            android:layout_marginRight="4dp"
-            android:layout_below="@+id/ivProfileHeader"
-            android:layout_toLeftOf="@+id/btnProfileFollow"/>
-
         <FrameLayout
                 android:layout_width="fill_parent"
                 android:layout_height="fill_parent"
@@ -335,7 +299,41 @@
                     android:enabled="false"/>
         </FrameLayout>
 
+        <LinearLayout
+            android:id="@+id/llProfileBio"
+            android:layout_width="fill_parent"
+            android:layout_height="fill_parent"
+            android:layout_marginTop="7dp"
+            android:orientation="vertical"
+            android:layout_below="@+id/gvProfileCommands"
+            android:layout_alignLeft="@+id/gvProfileCommands"
+            android:layout_alignStart="@+id/gvProfileCommands">
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="BIO"
+                android:textColor="#505050" />
+
+            <ImageView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginBottom="4dp"
+                android:layout_marginTop="2dp"
+                android:scaleType="fitXY"
+                android:src="@android:drawable/divider_horizontal_textfield" />
+
+            <TextView
+                android:id="@+id/tvProfileBio"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="" />
+            <!--android:autoLink="web|email|map"-->
+        </LinearLayout>
+
 
     </RelativeLayout>
 
-</ScrollView>
+    </android.support.v4.widget.NestedScrollView>
+
+</android.support.design.widget.CoordinatorLayout>
